--- a/vignettes/making-bootstrap-parameter-tables.Rmd
+++ b/vignettes/making-bootstrap-parameter-tables.Rmd
@@ -47,17 +47,16 @@ library(pmtables)
 
 # Data requirements
 
-## Bootstrap methods
-
-Bootstrapping a `bbr` model previously was a more involved process that required manually saving out csv. However as of `bbr 1.11.0`, bootstrapping can be done in-house, tracking a new bootstrap model object. For this reason we support multiple methods for specifying the estimates, all of which will be described below.
-
-In any case, lets set some key variables we'll use throughout this tutorial:
+Before we get started, lets set some key variables we'll use throughout this tutorial, including the original `bbr` model and the bootstrap run:
 ```{r}
+# Model Directory
 model_dir <- system.file("model/nonmem", package = "pmparams")
 # Parameter Key
-paramKeyPath <- file.path(model_dir, "pk-parameter-key-new.yaml")
+param_key <- file.path(model_dir, "pk-parameter-key-new.yaml")
 # Model we're bootstrapping
 orig_mod <- bbr::read_model(file.path(model_dir, "106"))
+# Bootstrap model object
+boot_run <- bbr::read_model(file.path(model_dir, "106-boot"))
 ```
 
 ## Parameter key
@@ -77,62 +76,41 @@ A more detailed walk-through of generating the parameter key is available here: 
 MeRGE Expo: Creating a Parameter Key </a>. 
 
 ```{r, message = FALSE}
-paramKey <- yaml::yaml.load_file(paramKeyPath)
-head(unlist(paramKey))
+param_key_lst <- yaml::yaml.load_file(param_key)
+head(unlist(param_key_lst))
 ```
 
-# Creating Bootstrap estimate parameter table with `bbr 1.11.0` and greater
+# Creating bootstrap estimate parameter table
 
-We begin by reading in the original `bbr` model and the bootstrap run:
-```{r, eval = eval_bbr_chunks}
-orig_mod <- bbr::read_model(file.path(model_dir, "106"))
-boot_run <- bbr::read_model(file.path(model_dir, "106-boot"))
-```
+### Bootstrap parameter estimates argument
+`pmparams` allows for different bootstrap parameter estimate input types:
 
-## Define & Format bootstrap parameter table
+* A ***path*** to a csv (`file.path(model_dir, "boot/data/boot-106.csv")`)
+* A data.frame (like what's returned from `bbr::bootstrap_estimates()`)
+
+As of `bbr 1.11.0`, bootstrapping can be done in-house, tracking a new bootstrap model object (`boot_run`). Once executed, we can easily read in these estimates using `bbr::bootstrap_estimates()`.
+
+## Define & format bootstrap parameter table
 We will now join parameter estimates and parameter key. `define_param_table` will handle both the joining and creation of new confidence interval related columns.
 
 - Note: this uses `dplyr::inner_join`, so only parameters included in the model output _and_ parameter key will be kept in the table. This was done so that if your base and final model used the same structural THETAs and random parameters, the same parameter key could be used for both. The additional covariate THETAs defined in the parameter key YAML would simply be ignored when creating the base model parameter table.
 
 ```{r, eval = eval_bbr_chunks}
+# Also accepted
+ # boot_ests <- file.path(model_dir, "boot/data/boot-106.csv")
+ # boot_ests <- readr::read_csv(file.path(model_dir, "boot/data/boot-106.csv"))
+boot_ests <- bbr::bootstrap_estimates(boot_run)
+
 boot_df <- define_boot_table(
-  .boot_estimates = bbr::bootstrap_estimates(boot_run),
-  .key = paramKeyPath
+  .boot_estimates = boot_ests,
+  .key = param_key
 )
 
 head(boot_df)
 ```
 
-Now we perform some house-keeping based on the new parameter key information, and format the values for the report using `format_boot_table`.
+Now we perform some house-keeping based on the new parameter key information and format the values for the report using `format_boot_table()`.
 ```{r, eval = eval_bbr_chunks}
-boot_df <- format_boot_table(boot_df)
-
-head(boot_df)
-```
-
-# Creating Bootstrap estimate paramter table using previous methods
-
-### Bootstrap parameter estimates 
-`pmparams` allows for different boot parameter estimate input types:
-* path to a csv 
-* A data.frame (like what's returned from `bbr::bootstrap_estimates()`)
-
-## Define & Format bootstrap parameter table
-
-For this example, we will use the path to a csv:
-```{r, message = FALSE}
-boot_ests_path <- file.path(model_dir, "boot/data/boot-106.csv")
-```
-
-As we can see below, we get the same final data frame as before:
-```{r}
-# Join to key and calculate confidence interval
-boot_df <- define_boot_table(
-  .boot_estimates = boot_ests_path,
-  .key = paramKeyPath
-)
-
-# Format table
 boot_df <- format_boot_table(boot_df)
 
 head(boot_df)
@@ -143,17 +121,13 @@ head(boot_df)
 
 Start by creating both of the formatted parameter tables, and then join them together as seen below:
 ```{r, eval = eval_bbr_chunks}
-boot_df <- define_boot_table(
-  .boot_estimates = bbr::bootstrap_estimates(boot_run),
-  .key = paramKeyPath,
-  .ci = 95
-) %>% format_boot_table()
+boot_df <- boot_ests %>%
+  define_boot_table(param_key, .ci = 95) %>% 
+  format_boot_table()
 
-param_df <- define_param_table(
-  .estimates = orig_mod,
-  .key = paramKeyPath,
-  .ci = 95
-) %>% format_param_table()
+param_df <- orig_mod %>%
+  define_param_table(param_key, .ci = 95) %>% 
+  format_param_table()
 
 
 boot_param_df <- left_join(param_df, boot_df, by = c("abb", "desc"))
@@ -163,11 +137,13 @@ head(boot_param_df)
 
 ```{r, eval = render_bbr_tables}
 # Define footnote
+
 footBoot <- glue::glue("CI were determined from the 2.5th and 97.5th percentiles 
-                of the non-parametric bootstrap estimates (n ={nrow(read.csv(boot_ests_path))}).")
+                of the non-parametric bootstrap estimates (n ={nrow(boot_ests)}).")
 
 # Render table
-tab <- make_boot_pmtable(.df = boot_param_df, .pmtype = "fixed") %>%
+tab <- boot_param_df %>%
+  make_boot_pmtable(.pmtype = "fixed") %>%
   st_center(desc = col_ragged(5.5), abb = "l") %>% 
   st_notes(param_notes()$ci) %>%                   # add abbreviations
   st_notes_str() %>%                               # collapse all abbreviations to a string                        
@@ -188,30 +164,26 @@ st_image_show(tab_out, width = 0.8)
 To illustrate the flexibility of `make_boot_pmtable()`, we'll use a more complex example where we include two confidence intervals:
 ```{r, eval = eval_bbr_chunks, message=FALSE}
 # Two confidence intervals
-boot_df <- define_boot_table(
-  .boot_estimates = bbr::bootstrap_estimates(boot_run),
-  .key = paramKeyPath,
-  .ci = 95
-) %>% format_boot_table()
+boot_df <- boot_ests %>%
+  define_boot_table(param_key, .ci = 95) %>% 
+  format_boot_table()
 
-boot_df2 <- define_boot_table(
-  .boot_estimates = bbr::bootstrap_estimates(boot_run),
-  .key = paramKeyPath,
-  .ci = "iqr"
-) %>% format_boot_table()
+boot_df2 <- boot_ests %>%
+  define_boot_table(param_key, .ci = "iqr") %>% 
+  format_boot_table()
 
 
-boot_param_df <- param_df %>%
-  left_join(boot_df) %>%
+boot_param_df <- param_df %>% 
+  left_join(boot_df) %>% 
   left_join(boot_df2)
 ```
 
 ```{r, eval = render_bbr_tables}
-##  FIXED EFFECTS table ----------------------------
-tab <- make_boot_pmtable(.df = boot_param_df, .pmtype = "fixed") %>% 
+tab <- boot_param_df %>%
+  make_boot_pmtable(.pmtype = "fixed") %>% 
   st_center(desc = col_ragged(5.5), abb = "l") %>% 
-  st_notes(param_notes()$ci) %>%                   # add abbreviations
-  st_notes_str() %>%                               # collapse all abbreviations to a string                        
+  st_notes(param_notes()$ci) %>%         # add abbreviations
+  st_notes_str() %>%                     # collapse all abbreviations to a string                        
   st_notes(param_notes()$logTrans) %>%   # customize other notes
   st_notes_detach(width = 1) %>% 
   st_files(output = "final-param-fixed-boot-multi-ci.tex") %>% 
